[package]
name = "matrix-export-tool"
authors = ["Kirin Etheridge <revelation@krxt.dev>"]
version = "0.1.0"
edition = "2024"
license = "ISC"

[dependencies]
anyhow = "1.0"
config = { version = "0.15.13", features = ["toml"] }
matrix-sdk = { version = "0.12", default-features = false, features = ["e2e-encryption", "automatic-room-key-forwarding", "rustls-tls", "qrcode", "bundled-sqlite"] }
mime = "0.3.17"
promkit = { version = "0.9", features = ["all"] }
promkit-derive = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "system-proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[profile.release]
strip = 'symbols'
lto = 'thin'
