[package]
name = "matrix-export-tool"
authors = ["Kirin Etheridge <revelation@krxt.dev>"]
version = "0.1.1"
edition = "2024"
license = "ISC"

[dependencies]
anyhow = "1.0"
config = { version = "0.15", features = ["toml"] }
matrix-sdk = { version = "0.16", default-features = false, features = ["e2e-encryption", "automatic-room-key-forwarding", "rustls-tls", "qrcode"] }
mime = "0.3"
mimetype-detector = "0.3.3"
promkit = { version = "0.10", features = ["all"] }
promkit-derive = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "system-proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[profile.release]
strip = 'symbols'
lto = 'thin'
