[package]
name = "matrix-export-tool"
authors = ["Kirin Etheridge <revelation@krxt.dev>"]
version = "0.2.0"
license = "ISC"
edition = "2024"

[features]
default = ["wayland"]
wayland = ["gpui/wayland"]
x11 = ["gpui/x11"]
http_debug = ["dep:rustls", "dep:webpki-roots", "rustls/aws-lc-rs"]

[dependencies]
anyhow = "1.0"
dirs = "6.0.0"
gpui = { version = "0.2.2", default-features = false, features = [
    "font-kit",
    "windows-manifest",
] }
gpui-component = "0.5.0"
keyring-core = "0.7.1"
matrix-sdk = { version = "0.16", default-features = false, features = [
    "e2e-encryption",
    "automatic-room-key-forwarding",
    "rustls-tls",
    "qrcode",
    "bundled-sqlite",
    "sso-login",
    "eyre",
] }
mimalloc = { version = "0.1.48", features = ["v3", "no_thp", "override"] }
mime = "0.3"
mimetype-detector = "0.3.4"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "system-proxy",
] }
rust-embed = { version = "8.9.0", features = [
    "compression",
    "deterministic-timestamps",
] }
rustls = { version = "0.23.35", optional = true }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0"
time = "0.3.44"
tokio = { version = "1.49.0", features = [
    "fs",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-core = { version = "0.1.36", default-features = false }
tracing-subscriber = "0.3.22"
webpki-roots = { version = "1.0.4", optional = true }
zeroize = "1.8.2"

[profile.release]
opt-level = 3
codegen-units = 1
strip = 'symbols'
lto = 'thin'
debug = "none"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
split-debuginfo = "unpacked"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "0.2.1", features = [
    "rt-async-io-crypto-rust",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.1", features = [
    "protected",
    "keychain",
] }
